<resources>
    <string name="app_name">PARADOR LA RENTA</string>
    <string name="str_nombre_producto">Nombre de un prodcuto muy largo y sabroso</string>
    <string name="str_valor_producto">$ 20.000</string>
    <string name="str_productos">Productos</string>
    <string name="str_cantidad">Cantidad</string>
    <string name="str_agregar">Agregar</string>
    <string name="str_precio">Precio</string>
    <string name="str_search">Buscar</string>
    <string name="search_hint">Buscar producto</string>
    <string name="str_total">Total : </string>
    <string name="str_descripcion">Descripción ...</string>
    <string name="str_descripcion2">Descripción</string>
    <string name="str_confirmar_pedido">Confirmar Pedido</string>
    <string name="str_cancelar">Quitar</string>
    <string name="str_filtro">Filtro</string>
    <string name="str_mesa">Mesa</string>
    <string name="str_pedir">Pedir</string>
</resources>
