<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_nombre_item_pedido"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/str_nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginRight="8dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/str_precio"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginHorizontal="8dp"
                android:id="@+id/txt_precio_item_pedido"
                android:layout_width="wrap_content"
                android:text="$100.000.00"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginHorizontal="8dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/str_cantidad"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_cantidad_item_pedido"
                android:layout_width="wrap_content"
                android:text="2"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </LinearLayout>

        <TextView
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_width="80dp"
            android:text="@string/str_descripcion2"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_descripcion_item_pedido"
            android:layout_width="match_parent"
            android:text="Sin toma y sin cebolla "
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:text="@string/str_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_total_item_pedido"
                android:text="$ 200.000.00"
                android:layout_width="100dp"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>