<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_dialog_producto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/nombre_producto_dialog_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/str_precio" />

        <TextView
            android:id="@+id/precio_dialog_producto"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/str_valor_producto" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/str_cantidad" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_sumar_dialog_producto"
                android:text=" + "
                android:textColor="@color/windowBackground"
                android:theme="@style/PedidosButton"
                android:layout_width="match_parent"
                android:layout_weight=".3"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cantidad_dialog_producto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".4"
                android:gravity="center"
                android:textSize="22sp"
                android:textAlignment="center"
                android:text="1" />

            <Button
                android:id="@+id/btn_restar_dialog_producto"
                android:text=" - "
                android:textColor="@color/windowBackground"
                android:theme="@style/PedidosButton"

                android:layout_weight=".3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_agregar_dialog_producto"
            android:layout_width="match_parent"
            android:theme="@style/PedidosButton"
            android:layout_height="wrap_content"
            android:textColor="@color/windowBackground"
            android:text="@string/str_agregar"/>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>